styles.css
h1, h2, h3, h4, h5, h6 {
    margin: 0;
    font-size: 1rem;
    font-family: 'poppins', Georgia, 'Times New Roman', Times, serif
}

p {
    margin: 0;
}

.weather-container{
    position: relative;
}

#weatherTemplate{
    display: none;
}

#weatherLocation{
    margin-bottom: 15px;
}

.flex-row{
    display: flex;
    justify-content: center;
    flex-direction: row;
}

#searchbox{
    margin-right: 2px;
}

.searchContainer {
    width: 30vw;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-bottom: 25px;

}

.searchContainer > *{
    margin-bottom: 5px;
}

input{
    height: 30px;
}



.weatherData{
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    gap: 10px;
    justify-content: center;
}

.d-none{
    display: none;
}

.period{
font-size: 0.65rem;
}

.nav-btns {
    display: flex;
    flex-direction: row;
    justify-content: center;
    margin: 5vh 0px 5vh 0px;
    gap: 5px;
}

button.active{
    background-color: rgb(0, 155, 202) !important;
    color: white!important;
}



.nav-btns > button >a{
    color: rgb(17, 17, 17);
    text-decoration: none;
}

.nav-btns > button{
    text-decoration: none;
    padding: 10px 20px;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    font-weight: bold;
    background-color: rgb(0, 195, 255);
    border: 0px;
    border-radius: 5px;
}

.summaryConatiner{
    display: flex;
    flex-direction: row;
    justify-content: center;
}

.searchbox {
    display: inline-block;
    margin-right: 10px;
}

.searchbox>input {
    width: 140px;
    height: 30px;
}

#searchButton{
    width: 60px;
    height: 35px;
}

.text-center {
    text-align: center !important;
}

.event-status{
    text-transform: capitalize;
}

.event-status.safe{
    background-color: rgb(3, 151, 3);
    color: rgb(0, 255, 0);
}

.event-status.unsafe{
    background-color: rgb(168, 20, 10);
    color: rgb(255, 78, 8);
}

.event-status.warning{
    background-color: rgb(168, 165, 10);
    color: rgb(255, 230, 8);
}

.event-status.error{
    background-color: rgb(126, 126, 126);
    color: rgb(230, 230, 230);
}

.weather-card {
    background-color: rgb(255, 255, 255);
    padding: 5px;
    border: 1px solid rgb(54, 54, 54);
    transition-duration: 0.5s;
}

.weather-card:hover{
    box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.151);
    transition-duration: 0.5s;
}

.weather-details {
    height: 20%;
    font-size: 0.85rem;
}

.weather-description {
    font-size: 0.75rem;
    text-transform: capitalize;
}

.filterOptionsContainer > label {
    font-size: small;
}

.filterOptionsContainer{
    display: flex;
    flex-direction: column;
}

.weather-image {
    display: flex;
    flex-direction: row;
    justify-content: center;
    height: 60%;
}

.weather-card {
    width: 200px;
    height: 270px;
    border: 1px solid rgb(212, 212, 212);
    border-radius: 3px;
}

.weather-header {
    font-family: poppins;
    height: 20%;
    padding: 5px 15px
}

.event-status {
    background-color: rgb(136, 136, 136);
    border-radius: 50px;
}


.iconImg{
    width: 80%;
    height: 100%;
}

.summaryItem > #weatherImage{
    display: flex;
    flex-direction: row;
    justify-content: center;
}

@media (max-width: 576px) {

    .searchContainer {
        width: 100vw;
        display: flex;
        flex-direction: column;
        justify-content: center;
    }

    .weather-card {
        width: 40vw;
        height: 220px;
        border: 1px solid rgb(212, 212, 212);
        border-radius: 3px;
        margin: 2px;
    }

    .weather-details {
        height: 20%;
        font-size: 0.65rem;
    }

    .nav-btns {
        display: flex;
        flex-direction: row;
        justify-content: center;
        margin: 5vh 5px 5vh 5px !important;
    }
    
}

